gccida/c3/expand_stmt
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_stmt/src/c-semantics.c:1233:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *elements; // r12 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_stmt/src/c-semantics.c:1235:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v8; // r14 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_stmt/src/c-semantics.c:1236:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *imag; // r12 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_stmt/src/c-semantics.c:1237:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *attributes; // r13 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_stmt/src/c-semantics.c:1241:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v14; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_stmt/src/c-semantics.c:1242:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v15; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_stmt/src/c-semantics.c:1244:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *clobbers; // [rsp+10h] [rbp-48h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_stmt/src/c-semantics.c:1245:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *inputs; // [rsp+18h] [rbp-40h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_stmt/src/c-semantics.c:1283:19: error: expected expression
if ( ( tree_node *)global_trees != elements ) 
                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_stmt/src/c-semantics.c:1283:8: error: use of undeclared identifier 'tree_node'
if ( ( tree_node *)global_trees != elements ) 
       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_stmt/src/c-semantics.c:1430:7: error: use of undeclared identifier 'genrtl_case_label_explained'
if ( !genrtl_case_label_explained ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_stmt/src/c-semantics.c:1433:1: error: use of undeclared identifier 'genrtl_case_label_explained'
genrtl_case_label_explained = 1; 
^
12 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_stmt/src/obj/c-semantics.o] Error 1
